kubernetes/apps/rustfs/rustfs/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-http
spec:
  parentRefs:
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: http-wildcard
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: http-wildcard-local
  hostnames:
    - rustfs.${LOCAL_DOMAIN}
    - rustfs.${PUBLIC_DOMAIN}
  rules:
    - filters:
        - type: CORS
          cors:
            allowCredentials: true
            allowOrigins:
              - "*"
            allowMethods:
              - "*"
            allowHeaders:
              - "*"
            exposeHeaders:
              - "*"
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-https
spec:
  parentRefs:
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard-local
  hostnames:
    - rustfs.${LOCAL_DOMAIN}
    - rustfs.${PUBLIC_DOMAIN}
  rules:
    - backendRefs:
        - name: rustfs-svc
          port: 9001
      filters:
        - type: CORS
          cors:
            allowCredentials: true
            allowOrigins:
              - "*"
            allowMethods:
              - "*"
            allowHeaders:
              - "*"
            exposeHeaders:
              - "*"

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-endpoint
spec:
  parentRefs:
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard-local
  hostnames:
    - rustfs-api.${LOCAL_DOMAIN}
    - rustfs-api.${PUBLIC_DOMAIN}
  rules:
    - backendRefs:
        - name: rustfs-svc
          port: 9000
      filters:
        - type: CORS
          cors:
            allowCredentials: true
            allowOrigins:
              - "*"
            allowMethods:
              - "*"
            allowHeaders:
              - "*"
            exposeHeaders:
              - "*"
